--- a/CatApiMeow/package.json
+++ b/CatApiMeow/package.json
@@ -26,7 +26,7 @@
     "@ngrx/store": "^7.4.0",
     "@ngrx/store-devtools": "^7.4.0",
     "core-js": "^2.5.4",
-    "rxjs": "~6.3.3",
+    "rxjs": "^6.3.3",
     "rxjs-compat": "^6.5.1",
     "zone.js": "~0.8.26"
   },
