--- a/CatApiMeow/package.json
+++ b/CatApiMeow/package.json
@@ -52,6 +52,6 @@
     "redux-devtools-extension": "^2.13.8",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "^3.5.1"
+    "typescript": "3.5.1"
   }
 }
