--- a/CatApiMeow/package.json
+++ b/CatApiMeow/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.2.1",
     "@ngrx/core": "^1.2.0",
     "@ngrx/effects": "^7.4.0",
     "@ngrx/router-store": "^7.4.0",
