updated carousel and added shared toolbar component

--- a/CatApiMeow/package.json
+++ b/CatApiMeow/package.json
@@ -29,8 +29,21 @@
     "@ngrx/store": "^7.4.0",
     "@ngrx/store-devtools": "^7.4.0",
     "core-js": "^2.6.9",
+    "ngx-slick": "^0.2.1",
     "rxjs": "^6.5.2",
     "rxjs-compat": "^6.5.2",
+    "tachyons-aspect-ratios": "^1.0.1",
+    "tachyons-background-position": "^1.0.3",
+    "tachyons-background-size": "^5.0.5",
+    "tachyons-clears": "^3.0.4",
+    "tachyons-display": "^5.0.5",
+    "tachyons-floats": "^3.0.5",
+    "tachyons-font-weight": "^5.0.5",
+    "tachyons-links": "^3.0.11",
+    "tachyons-skins": "^4.1.1",
+    "tachyons-spacing": "^6.0.5",
+    "tachyons-type-scale": "^6.1.1",
+    "tachyons-widths": "^5.2.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
@@ -51,6 +64,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
     "redux-devtools-extension": "^2.13.8",
+    "tachyons": "^4.10.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "3.4.5"
